<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search"
        />
<!--    <item-->
<!--        android:id="@+id/action_add_photo"-->
<!--        android:icon="@drawable/ic_add_a_photo"-->
<!--        android:enabled="true"-->
<!--        android:title="@string/gallery"-->
<!--        />-->
    <item
        android:id="@+id/action_friend"
        android:icon="@drawable/ic_friend"
        android:enabled="true"
        android:title="@string/friend"
        />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_person"
        android:enabled="true"
        android:title="@string/account"
        />
</menu>