<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/rounded_keyword_bg"
    android:gravity="center_vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tvKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Keyword"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/white"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"/>

    <ImageButton
        android:id="@+id/btnRemoveKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove_keyword"
        android:padding="8dp"/>

</LinearLayout>
