...

        </RelativeLayout>


        <!-- RecyclerView for the timeline -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_timeline"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- TextView for no news message -->
        <TextView
            android:id="@+id/tvNoNewsMessage"
            android:layout_marginTop="300dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
...
