<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/user_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_account">
            </ImageView>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/user_profile">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>

        <!--location-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Location"
            android:layout_marginLeft="10dp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/et_location"
                android:layout_marginLeft="10dp"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false">

            </TextView>


            <Button
                android:id="@+id/btn_getLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Get Location"
                android:layout_marginRight="10dp"/>

        </RelativeLayout>

        <!--Time-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set Time for News Summary"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_setTime"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="HH:mm"
                android:inputType="time"

                android:clickable="true"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/btn_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/et_setTime"
                android:text="Now"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

        <!--Language-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Language"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_set_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preference"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/primary"/>


        <!-- TODO: Give this button a nicer colour? This red is a bit harsh maybe -->
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/design_default_color_error"/>

    </LinearLayout>
</layout>